--- a/ValorantApp/Screen/MapsVC/MapsVC.storyboard
+++ b/ValorantApp/Screen/MapsVC/MapsVC.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,37 +16,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="RaS-zs-8k8">
-                                <rect key="frame" x="0.0" y="92" width="414" height="600"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="RaS-zs-8k8">
+                                <rect key="frame" x="0.0" y="44" width="414" height="792"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="600" id="dCc-5h-oPU"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Q4R-ng-7M3">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Q4R-ng-7M3">
                                     <size key="itemSize" width="409" height="657.5"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="7MH-Cb-e2Y">
-                                        <rect key="frame" x="0.0" y="-29" width="409" height="657.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Z6b-vy-CyC">
-                                            <rect key="frame" x="0.0" y="0.0" width="409" height="657.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <size key="customSize" width="409" height="657.5"/>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LuS-P5-KHz">
-                                <rect key="frame" x="10" y="63" width="394" height="29"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="43N-Gh-Y6K">
                                 <rect key="frame" x="0.0" y="836" width="414" height="26"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
@@ -58,19 +37,15 @@
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="43N-Gh-Y6K" secondAttribute="bottom" id="6kE-wX-Dvm"/>
                             <constraint firstItem="RaS-zs-8k8" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="83p-au-nJa"/>
-                            <constraint firstItem="LuS-P5-KHz" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="19" id="LUL-zN-j34"/>
                             <constraint firstItem="43N-Gh-Y6K" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Nal-wX-3Db"/>
                             <constraint firstItem="RaS-zs-8k8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="bGM-Fe-yB7"/>
-                            <constraint firstItem="RaS-zs-8k8" firstAttribute="top" secondItem="LuS-P5-KHz" secondAttribute="bottom" id="cPi-ka-nM4"/>
-                            <constraint firstItem="LuS-P5-KHz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="o8K-bH-K9f"/>
-                            <constraint firstItem="LuS-P5-KHz" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="pL6-ek-9Ks"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="LuS-P5-KHz" secondAttribute="trailing" constant="10" id="rrT-ua-jfM"/>
+                            <constraint firstItem="RaS-zs-8k8" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="bs9-5v-jQc"/>
+                            <constraint firstItem="43N-Gh-Y6K" firstAttribute="top" secondItem="RaS-zs-8k8" secondAttribute="bottom" id="ewW-8l-fk1"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="43N-Gh-Y6K" secondAttribute="trailing" id="zvj-VD-ofb"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mapCollectionView" destination="RaS-zs-8k8" id="s7B-lj-xNT"/>
-                        <outlet property="mapIconName" destination="LuS-P5-KHz" id="T0k-rJ-gjo"/>
                         <outlet property="mapsPageController" destination="43N-Gh-Y6K" id="pYd-25-btM"/>
                     </connections>
                 </viewController>
